fixed game__card on see all page from clipping off screen due to width for iphone X or smaller

--- a/src/styles/games.scss
+++ b/src/styles/games.scss
@@ -1,6 +1,6 @@
 .gamelisting {
     background: white;
-    width: 100%;
+    width: 95%;
     padding: 1rem;
     margin: 0.5rem;
     flex-wrap: wrap;
